--- a/assets/css/aboutpage.css
+++ b/assets/css/aboutpage.css
@@ -1,6 +1,5 @@
 .containerr {
     text-align: center;
-    /* background-color: bisque; */
 }
 
 .section-headingg h1{
@@ -22,16 +21,16 @@
     border: none;
     cursor: pointer;
     transition: background-color 0.3s, transform 0.2s, box-shadow 0.2s;
-    text-decoration: none; /* Remove underlines for anchor */
+    text-decoration: none; 
 }
 
 .highlight-button:hover {
     background-color: #ff4444;
     transform: scale(1.05);
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow effect */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); 
 }
 
-
+/* -------------------- */
 
 
 
